Project "TC Knowledge Repo" {
  database_type: 'PostgreSQL'
}

// App: Users

Enum user_role {
  STUDENT
  ADMIN
}

Table users {
  id uuid [primary key]
  email varchar(255) [not null, unique]
  password varchar(128) [not null]
  first_name varchar(150)
  last_name varchar(150)
  role user_role [not null, default: 'STUDENT']
  is_active boolean [not null, default: true]
  strike_count int [not null, default: 0, note: 'Incremented on malicious/duplicate uploads']
  banned_until timestamp [note: 'Nullable, set when strike_count reaches 3']
  date_joined timestamp [not null]
}

// App: Resources (Core)

Table categories {
  id uuid [primary key]
  name varchar(100) [not null, unique]
  description text
  created_at timestamp [not null]
  updated_at timestamp [not null]
}

Enum tag_type {
  SEMESTER
  TAHUN
  KELAS
  GENERAL
}

Table tags {
  id uuid [primary key]
  name varchar(50) [not null, unique]
  type tag_type [not null, default: 'GENERAL']
  created_at timestamp [not null]
  updated_at timestamp [not null]
}

Enum resource_type {
  PDF
  YOUTUBE
  MARKDOWN
}

Enum resource_status {
  PENDING
  APPROVED
  REJECTED
  QUARANTINED [note: 'Auto-set when 3+ distinct users report the resource']
}

Table resources {
  id uuid [primary key]
  title varchar(200) [not null]
  description varchar(2000) [not null]
  type resource_type [not null]
  status resource_status [not null, default: 'PENDING']
  rejection_reason text
  file_hash varchar(64) [note: 'SHA-256 hex digest of uploaded file, nullable']
  minhash_signature jsonb [note: 'MinHash signature array for near-duplicate detection, nullable']
  r2_object_key varchar [note: 'Nullable, used for PDF']
  youtube_url varchar [note: 'Nullable, used for YOUTUBE']
  markdown_body text [note: 'Nullable, used for MARKDOWN']
  category_id uuid [not null, ref: > categories.id]
  uploader_id uuid [not null, ref: > users.id]
  search_vector tsvector [note: 'PostgreSQL full-text search vector']
  created_at timestamp [not null]
  updated_at timestamp [not null]
}

Table resource_tags {
  resource_id uuid [not null, ref: > resources.id]
  tag_id uuid [not null, ref: > tags.id]

  indexes {
    (resource_id, tag_id) [pk]
  }
}

Enum bulk_download_status {
  PENDING
  PROCESSING
  DONE
  FAILED
}

Table bulk_downloads {
  id uuid [primary key]
  task_id varchar(255) [unique, note: 'Celery task ID']
  status bulk_download_status [not null, default: 'PENDING']
  filters jsonb [note: 'Stores category_id, tag_ids, search string']
  download_url varchar [note: 'Presigned R2 URL, expires after 1 hour']
  student_id uuid [not null, ref: > users.id]
  created_at timestamp [not null]
  updated_at timestamp [not null]
}

// App: Requests

Enum request_status {
  OPEN
  FULFILLED
}

Table resource_requests {
  id uuid [primary key]
  title varchar(200) [not null]
  description text [not null]
  status request_status [not null, default: 'OPEN']
  category_id uuid [ref: > categories.id, note: 'Nullable']
  requester_id uuid [not null, ref: > users.id]
  fulfilled_by_id uuid [ref: > users.id, note: 'Nullable']
  resource_id uuid [ref: > resources.id, note: 'Nullable, populated when fulfilled']
  created_at timestamp [not null]
  updated_at timestamp [not null]
}

// App: Reports

Enum report_reason {
  COPYRIGHT
  INAPPROPRIATE
  SPAM
  DUPLICATE
  OTHER
}

Enum report_status {
  OPEN
  DISMISSED
  REMOVED
}

Table reports {
  id uuid [primary key]
  resource_id uuid [not null, ref: > resources.id]
  reporter_id uuid [not null, ref: > users.id]
  reason report_reason [not null]
  description text [note: 'Required if reason is OTHER']
  status report_status [not null, default: 'OPEN']
  resolved_by_id uuid [ref: > users.id, note: 'Admin who resolved it, nullable']
  created_at timestamp [not null]
  updated_at timestamp [not null]
}